--- a/src/dbcp-config.properties
+++ b/src/dbcp-config.properties
@@ -1,12 +1,12 @@
 #DBCP Connection pool configration
 driverClassName=oracle.jdbc.driver.OracleDriver
-url=jdbc:oracle:thin:@192.168.134.128:1521:agile9
+url=jdbc:oracle:thin:@agileplm:1521:agile9
 username=agile
-password=tartan
-initialSize=10
+password=agile933
+initialSize=5
 maxTotal=50
 maxIdle=50 
-minIdle=20
+minIdle=10
 maxWaitMillis=10000
 validationQuery=select * from dual
 #testOnBorrow
