--- a/src/conf.properties
+++ b/src/conf.properties
@@ -3,4 +3,6 @@ agileurl=http://agileplm:7001/Agile
 agileuser=admin
 agilepwd=agile933
 
-ListAPI=DocIssueCategory
+ListAPI=RM_DIC_SpecReview
+reviewNodeAPI=Review1
+approveNodeAPI=Review2
