--- a/src/dbcp-config.properties
+++ b/src/dbcp-config.properties
@@ -1,8 +1,8 @@
 #DBCP Connection pool configration
 driverClassName=oracle.jdbc.driver.OracleDriver
-url=jdbc:oracle:thin:@agileplm:1521:agile9
+url=jdbc:oracle:thin:@172.16.90.31:1521:agile9
 username=agile
-password=agile933
+password=tartan933
 initialSize=10
 maxTotal=20
 maxIdle=10
